<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.dhruvi.job.company.AddpostActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#fff">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post"
        android:textAlignment="center"
        android:textColor="@color/myApp"
        android:textSize="40sp"
        />


    <Spinner
        android:id="@+id/catpost"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:nextFocusDown="@id/subcatpost"
        />
    <Spinner
        android:id="@+id/subcatpost"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:nextFocusDown="@id/titlepost"
        />

    <EditText
        android:id="@+id/titlepost"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/roundedittext"
        android:hint="@string/enter_title"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry"
        android:nextFocusDown="@id/quantity"
        android:drawableLeft="@drawable/title"/>
    <EditText
        android:id="@+id/salarypost"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/roundedittext"
        android:hint="Enter salary"
        android:inputType="number"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry"
        android:nextFocusDown="@id/quantity"
        android:drawableLeft="@drawable/salary"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/no_of_emplyees_wanted"
            android:layout_marginLeft="10dp"
            android:textSize="17sp"
            android:layout_marginStart="10dp" />
        <EditText
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:id="@+id/quantity"
            android:layout_marginLeft="20dp"
            android:hint="@string/_0"
            android:textAlignment="center"
            android:layout_marginStart="20dp"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry"
            android:inputType="number"
            android:nextFocusDown="@id/expertpost"
            />
    </LinearLayout>
    <EditText
        android:id="@+id/expertpost"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/roundedittext"
        android:hint="@string/enter_your_exceptation_of_expertise"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry"
        android:nextFocusDown="@id/skillpost"
        android:drawableLeft="@drawable/expert"/>
    <EditText
        android:id="@+id/skillpost"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/roundedittext"
        android:hint="@string/enter_special_skill_you_wanted"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry"
        android:nextFocusDown="@id/notepost"
        android:drawableLeft="@drawable/skill"/>
    <EditText
        android:id="@+id/notepost"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/roundedittext"
        android:hint="@string/enter_any_notes"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry"
        android:nextFocusDown="@id/bypost"
        android:drawableLeft="@drawable/notes"/>
    <EditText
        android:id="@+id/bypost"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/roundedittext"
        android:hint="@string/enter_your_name"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry"
        android:nextFocusDown="@id/addpost"
        android:drawableLeft="@drawable/by"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/addpost"
        android:text="@string/add_post"
        android:background="@color/myApp"
        android:gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:textColor="#fff"/>

</LinearLayout>
</ScrollView>
