<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/b"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.dhruvi.job.jobseeker.JobseekerloginActivity">

    <ImageView
        android:id="@+id/jobseekerlogin_img"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/logoz" />

    <android.support.v7.widget.CardView
        android:id="@+id/joblogincv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_username"
                app:hintAnimationEnabled="true">

                <EditText
                    android:id="@+id/jobseekerlogin_unm"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_toRightOf="@+id/imgemail"
                    android:background="@drawable/roundedittext"
                    android:drawableLeft="@drawable/mainemail"
                    android:drawableStart="@drawable/mainemail"
                    android:nextFocusDown="@id/jobseekerlogin_pwd"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    tools:ignore="MissingPrefix,RtlSymmetry" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/jobseekerlogin_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_toRightOf="@+id/imgpass"
                    android:background="@drawable/roundedittext"
                    android:drawableLeft="@drawable/password"
                    android:drawableStart="@drawable/password"
                    android:inputType="textPassword"
                    android:nextFocusDown="@id/jobseekerlogin_btn"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    tools:ignore="RtlSymmetry" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/jobseekerlogin_btn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/myApp"
                android:text="login"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/jobfrgtpwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Forget password ?"
                android:textColor="@color/myApp"
                android:textSize="15sp"
                android:textAlignment="center"
                android:layout_margin="10dp"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
